# backend/routes/api.js
@@ -1,28 +1,24 @@
 require("express-router-group");
 const express = require("express");
-const authController = require("modules/auth/controllers/authController");
 const postsController = require("modules/post/controllers/postsController");
-const languagesController = require("modules/languages/controllers/languageController");
-const { user, owner, admin } = require("../middlewares/authMiddleware");
+const authController = require("modules/auth/controllers/authController");
+const { user, owner } = require("../middlewares/authMiddleware");
 const router = express.Router({ mergeParams: true });
 
 router.group("/auth", (router) => {
   router.post("/sign-in", authController.signIn);
-  router.post("/sign-up", authController.signUp);
-  router.get("/recover-password", authController.recoverPassword);
-  router.put("/reset-password", authController.resetPassword);
 });
 
-router.group("/languages", user, (router) => {
-  router.get("/", languagesController.index);
-  router.get("/:languageId", languagesController.show);
-});
+// router.group("/languages", user, (router) => {
+//   router.get("/", languagesController.index);
+//   router.get("/:languageId", languagesController.show);
+// });
 
-router.group("/languages", owner, (router) => {
-  router.post("/create", postsController.create);
-  router.put("/update/:postId", postsController.update);
-  router.delete("/delete/:postId", postsController.destroy);
-});
+// router.group("/languages", owner, (router) => {
+//   router.post("/create", postsController.create);
+//   router.put("/update/:postId", postsController.update);
+//   router.delete("/delete/:postId", postsController.destroy);
+// });
 
 // router.group("/categories", user, (router) => {
 //   router.get("/", categoriesController.index);
